@@ -24,6 +24,9 @@ x2goclient (4.1.0.1-0x2go1) UNRELEASED; urgency=medium
     - src/sshmasterconnection.cpp: replace deprecated channel_open_session ()
       function with ssh_channel_open_session (). Might break on ancient
       systems, but we don't care.
+    - src/sshmasterconnection.cpp: replace deprecated channel_request_exec ()
+      function with ssh_channel_request_exec (). Might break on ancient
+      systems, but we don't care.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Wed, 22 Feb 2017 07:13:10 +0100
 
